--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
-</body>
+<div class="body">
+  <div class="img-row">
+    <img class="homi-logo" src="./assets/images/homi_logo.png"/>
+  </div>
+  <div class="router">
+    <app-root></app-root>
+  </div>
+</div>
+
 </html>
