--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,18 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularRouterSample</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<div class="body">
-  <div class="img-row">
-    <img class="homi-logo" src="./assets/images/homi_logo.png"/>
-  </div>
-  <div class="router">
-    <app-root></app-root>
-  </div>
-</div>
-
+  <head>
+    <base href="/">
+    <meta charset="utf-8">
+    <title>AngularRouterSample</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  </head>
+  <body class="body">
+    <div class="img-row">
+      <img class="homi-logo" src="./assets/images/homi_logo.png"/>
+    </div>
+    <div class="root-container">
+      <app-quiz></app-quiz>
+    </div>
+  </body>
 </html>
