--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/">
     <meta charset="utf-8">
-    <title>AngularRouterSample</title>
+    <title>Homi Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
@@ -15,4 +15,10 @@
       <app-quiz></app-quiz>
     </div>
   </body>
+  <div class="cloud-left">
+    <img class="img-left" src="./assets/images/cloud-left.png"/>
+  </div>
+  <div class="cloud-right">
+    <img class="img-right" src="./assets/images/cloud-right.png"/>
+  </div>
 </html>
